@@ -26,7 +26,6 @@ $Id$
   - Evaluate EEPROM contents after writing.
   - SDO dictionary fetching in operation mode.
   - SDO write access in sysfs.
-  - Speed up IDLE state machine through fast mode with schedule().
   - Configure slave ports to automatically open on link detection.
   - Calculate cycle time of operation state machine.
 
